# megami2210_backend

./: .coveragerc  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  megami.code-workspace  pyproject.toml  pytest.ini  sandbox.md
app/api/: server.py
app/api/routes/: __init__.py  accounts.py  login.py  mine.py  tasks.py
app/api/schemas/: accounts.py  base.py  tasks.py  token.py
app/core/: config.py  database.py
app/db/: database.py  models.py  query_conf.py
app/db/migrations/: env.py  util.py
app/db/migrations/versions/: 2022_10_31_0723-307da1eafeaa_create_schema.py  2022_10_31_0723-de6f035be044_create_tasks_table.py
app/db/repositries/: tasks.py
app/db/repositry/: tasks.py
app/models/: __init__.py  segment_values.py  table_models.py
app/models/migrations/: util.py
app/models/migrations/versions/: 2022_10_31_0723-307da1eafeaa_create_schema.py  2022_10_31_0723-de6f035be044_create_accounts_table.py  2022_10_31_0723-de6f035be044_create_tasks_table.py  2022_11_19_0010-e85dfc42f48d_create_accounts_table.py  2022_11_19_0010-e85dfc42f48d_create_tasks_table.py  2022_12_09_0722-139619b8894b_create_mst_tables.py  2022_12_12_1832-f3ef6aa8d42a_create_inventory_tables.py  2022_12_14_2237-76241be00f1b_create_purchase_tables.py  (+2 more)
app/repositries/: __init__.py  accounts.py  tasks.py
app/services/: __init__.py  accounts.py  authentication.py  permittion.py  segment_values.py  tasks.py
infra/: Dockerfile
tests/: conftest.py  test_accounts.py  test_authtoken.py  test_mine.py  test_tasks.py  test_watch_tasks.py
tests/data/: test_profile_data.csv  test_task_data.csv
