[tool.poetry]
name = "megami2210"
version = "0.9.0"
description = "MEGUMI2210(TODO Application)"
authors = ["Teruaki.Sato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
